--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
   <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
@@ -37,6 +39,27 @@
       <a href="/" class="logo">
         <img src="./images/starbucks_logo.png" alt="STARBUCKS"/>
       </a>
+
+      <div class="sub-menu">
+        <ul class="menu">
+          <li>
+            <a href="/signin">Sign In</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">My Starbucks</a>
+          </li>
+          <li>
+            <a href="javascript:void(0)">Customer Service & Ideas</a>
+          </li>          
+          <li>
+            <a href="javascript:void(0)">Find a Store</a>
+          </li>                    
+        </ul>
+        <div class="search">
+          <input type="text"/>
+          <div class="material-symbols-outlined">search</div>
+        </div>
+      </div>
 
     </div>
 
