--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Starbucks" />
   <meta property="og:title" content="Starbucks Coffee Korea" />
-  <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+  <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점 으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
   <meta property="og:image" content="./images/starbucks_seo.jpg" />
   <meta property="og:url" content="https://starbucks.co.kr" />
   <meta property="twitter:card" content="summary" />
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
   <link rel="stylesheet" href="./css/main.css"/>
+  <script type="text/javascript" defer src="./js/main.js"></script>
 </head>
 <body>
 
