--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
   <link rel="stylesheet" href="./css/main.css"/>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>  
   <script defer type="text/javascript" src="./js/main.js"></script>
 </head>
 <body>
@@ -377,7 +379,7 @@
 
   </header>
 
-  <!-- VISUAL  -->
+  <!-- VISUAL -->
   <section class="visual">
     <div class="inner">
 
@@ -397,6 +399,34 @@
         <img src="./images/visual_spoon.png" alt="Spoon" class="spoon"/>
       </div>
     </div>
+  </section>
+
+
+  <!-- NOTICE -->
+  <section class="notice">
+
+    <div class="notice-line">
+      <div class="bg-left"></div>
+      <div class="bg-right"></div>
+      <div class="inner">
+
+        <div class="inner__left">
+          <h2>공지사항</h2>
+          <div class="swiper-container"></div>
+          <a href="javascript:void(0)" class="notice-line__more">
+            <div class="material-symbols-outlined">add_circle</div>
+          </a>
+        </div>
+        <div class="inner__right">
+          <h2>스타벅스 프로모션</h2>
+          <div class="toggle-promotion">
+            <div class="material-symbols-outlined">upload</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
   </section>
 
 </body>
