--- a/index.html
+++ b/index.html
@@ -412,7 +412,22 @@
 
         <div class="inner__left">
           <h2>공지사항</h2>
-          <div class="swiper-container"></div>
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">크리스마스 연말연시 스타벅스 매장 영업시간 안내</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">[당첨자 발표] 2023년 스타벅스 플래너 이벤트 당첨자 발표</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">스타벅스 커피 어플리케이션 버전 업데이트</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="javascript:void(0)">[당첨자 발표] 뉴이어 전자영수증 이벤트 당점자 발표</a>
+              </div>
+            </div>
+          </div>
           <a href="javascript:void(0)" class="notice-line__more">
             <div class="material-symbols-outlined">add_circle</div>
           </a>
@@ -427,7 +442,14 @@
       </div>
     </div>
 
+  
+    <div class="promotion">
+      <div class="swipe"></div>
+    </div>
+  
   </section>
+
+
 
 </body>
 </html>
